# HZIP

./: .gitignore  CMakeLists.txt  CMakePresets.json  CppProperties.json  LICENSE  README.md  test_file_backup.huf
HuffmanCoding/: CMakeLists.txt  file.cpp  file.h  io.cpp  main.cpp  message.h  resources.rc  storage.h  tree.cpp  tree.h  types.cpp  types.h
HuffmanCoding/Inc/: file.h  general.h  tree.h  types.h
HuffmanCoding/Src/: file.cpp  general.cpp  io.cpp  main.cpp  tree.cpp  types.cpp
